tests/spec/lex/snapshots/octal_basic.snap
---
source: tests/spec/lex/mod.rs
description: 0o755
---
LexResult {
    tokens: [
        Token {
            kind: Integer,
            text: "0o755",
            byte_offset: 0,
            byte_length: 5,
        },
        Token {
            kind: EOF,
            text: "",
            byte_offset: 5,
            byte_length: 0,
        },
    ],
    errors: [],
    blank_lines: [],
}
