tests/spec/lex/snapshots/octal_legacy.snap
---
source: tests/spec/lex/mod.rs
description: "input: 0755"
---
LexResult {
    tokens: [
        Token {
            kind: Integer,
            text: "0755",
            byte_offset: 0,
            byte_length: 4,
        },
        Token {
            kind: EOF,
            text: "",
            byte_offset: 4,
            byte_length: 0,
        },
    ],
    errors: [],
    trivia: Trivia {
        comments: [],
        doc_comments: [],
        blank_lines: [],
    },
}
