tests/spec/lex/snapshots/octal_legacy_with_underscores.snap
---
source: tests/spec/lex/mod.rs
description: "input: 0644_755"
---
LexResult {
    tokens: [
        Token {
            kind: Integer,
            text: "0644_755",
            byte_offset: 0,
            byte_length: 8,
        },
        Token {
            kind: EOF,
            text: "",
            byte_offset: 8,
            byte_length: 0,
        },
    ],
    errors: [],
    trivia: Trivia {
        comments: [],
        doc_comments: [],
        blank_lines: [],
    },
}
