tests/spec/lex/snapshots/octal_uppercase_prefix.snap
---
source: tests/spec/lex/mod.rs
description: 0O755
---
LexResult {
    tokens: [
        Token {
            kind: Integer,
            text: "0O755",
            byte_offset: 0,
            byte_length: 5,
        },
        Token {
            kind: EOF,
            text: "",
            byte_offset: 5,
            byte_length: 0,
        },
    ],
    errors: [],
    blank_lines: [],
}
