tests/spec/lex/snapshots/octal_with_underscores.snap
---
source: tests/spec/lex/mod.rs
description: 0o777_777
---
LexResult {
    tokens: [
        Token {
            kind: Integer,
            text: "0o777_777",
            byte_offset: 0,
            byte_length: 9,
        },
        Token {
            kind: EOF,
            text: "",
            byte_offset: 9,
            byte_length: 0,
        },
    ],
    errors: [],
    blank_lines: [],
}
