tests/spec/lex/snapshots/r_followed_by_hash_without_quote_is_identifier.snap
---
source: tests/spec/lex/mod.rs
description: "let r = 1; r#"
---
LexResult {
    tokens: [
        Token {
            kind: Let,
            text: "let",
            byte_offset: 0,
            byte_length: 3,
        },
        Token {
            kind: Identifier,
            text: "r",
            byte_offset: 4,
            byte_length: 1,
        },
        Token {
            kind: Equal,
            text: "=",
            byte_offset: 6,
            byte_length: 1,
        },
        Token {
            kind: Integer,
            text: "1",
            byte_offset: 8,
            byte_length: 1,
        },
        Token {
            kind: Semicolon,
            text: ";",
            byte_offset: 9,
            byte_length: 1,
        },
        Token {
            kind: Identifier,
            text: "r",
            byte_offset: 11,
            byte_length: 1,
        },
        Token {
            kind: Hash,
            text: "#",
            byte_offset: 12,
            byte_length: 1,
        },
        Token {
            kind: EOF,
            text: "",
            byte_offset: 13,
            byte_length: 0,
        },
    ],
    errors: [],
    blank_lines: [],
}
