tests/spec/lex/snapshots/range_full.snap
---
source: tests/spec/lex/mod.rs
description: ".."
---
LexResult {
    tokens: [
        Token {
            kind: DotDot,
            text: "..",
            byte_offset: 0,
            byte_length: 2,
        },
        Token {
            kind: EOF,
            text: "",
            byte_offset: 2,
            byte_length: 0,
        },
    ],
    errors: [],
    blank_lines: [],
}
